--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,8 +13,12 @@
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
 
-    --primary: 260 93% 70%;
+    /* --primary: 260 93% 70%; */
+    --primary: 207 39% 37%;
     --primary-foreground: 0 0% 98%;
+
+    --primary2: 0 0% 0%;
+
 
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
@@ -47,6 +51,8 @@
 
     --primary: 251 95% 92%;
     --primary-foreground: 0 0% 9%;
+
+    --primary2: 0 0% 100%;
 
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
