--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,8 +16,8 @@
     /* --primary: 260 93% 70%; */
     --primary: 207 39% 37%;
     --primary-foreground: 0 0% 98%;
-
     --primary2: 0 0% 0%;
+    --primary2-foreground: 0 0% 98%;
 
 
     --secondary: 0 0% 96.1%;
